src/objects/QIRS_Product_Safety__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>QIRS Product Safety</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>QIRS_Product_Safety_Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QIRS_Product_Safety</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>